--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -1,16 +1,55 @@
-.register{
-    &-container{
-        width: 20%;
-        background-color: white;
-        margin: auto;
-        padding: 10px;
-    }
-    &-form{
-        &-item{
-            margin: 5px 0;
-            label{
-                margin-right: 5px;
-            }
+.register-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 40px;
+    height: 100vh;
+  
+    .register-form-container {
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+  
+      h2 {
+        margin-bottom: 20px;
+        color: #1b1e7a;
+      }
+  
+      .register-form-item {
+        margin-bottom: 20px;
+  
+        input[type="text"],
+        input[type="email"],
+        input[type="password"] {
+          width: 100%;
+          padding: 10px;
+          border: none;
+          border-bottom: 1px solid black;
+          outline: none;
+  
+          &:focus {
+            border-color: #1b1e7a;
+          }
         }
+      }
+  
+      button {
+        width: 100%;
+        padding: 10px;
+        background-color: #40427A;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+  
+        &:hover {
+          background-color: #1b1e7a;
+        }
+      }
     }
-}
+  }
+  
