--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,68 +1,59 @@
-.Login{
-    &-Container{
-        width: 20%;
-        margin: 40px auto;
-        background-color: white;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        border-radius: 15px;
-        &-Title{
-            font-size: 30px;
-            font-weight: bold;
-            margin: 10px;
-            height: 30px;
-            margin-bottom: 20px;
+.login-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding-top: 40px;
+    height: 100vh;
+  
+    .login-form-container {
+      width: 100%;
+      max-width: 400px;
+      padding: 20px;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+  
+      h2 {
+        margin-bottom: 20px;
+        color: #1b1e7a;
+      }
+  
+      .login-message {
+        margin-bottom: 10px;
+        color: red;
+        font-size: 14px;
+      }
+  
+      .login-form-item {
+        margin-bottom: 20px;
+  
+        .login-form-input-field {
+          width: 100%;
+          padding: 10px;
+          border: none;
+          border-bottom: 1px solid black;
+          outline: none;
+  
+          &:focus {
+            border-color: #1b1e7a;
+          }
         }
-        &-Message{
-            color: red;
-            font-weight: bold;
-            margin: 10px;
-            height: 30px;
-            margin-bottom: 20px;
-        }
-    }
-    &-Form{
+      }
+  
+      .login-form-button {
         width: 100%;
-        display: flex;
-        flex-direction: column;
-        &-Input{
-            margin: 10px;
-            display: flex;
-            flex-direction: column;
-            &-Label{
-                font-weight: bold;
-                margin-bottom: 5px;
-            }
-            &-Field{
-                height: 30px;
-                border-radius: 5px;
-                border: 1px solid #40427A;
-                padding: 5px;
-            }
+        padding: 10px;
+        background-color: #40427a;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+  
+        &:hover {
+          background-color: #1b1e7a;
         }
-        &-Button{
-            margin: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 30px;
-            border-radius: 5px;
-            border: 1px solid #40427A;
-            background-color: #40427A;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-            &:hover{
-                background-color: white;
-                color: #40427A;
-            }
-        }
+      }
     }
-}
-
-body{
-    background-color: #40427A;
-}
+  }
+  
